--- a/app/frontend/src/components/CabinSection.astro
+++ b/app/frontend/src/components/CabinSection.astro
@@ -862,6 +862,55 @@ import CabinPanel from "./CabinPanel.astro";
                     },
                 },
             });
+
+            
+
+            // 🔁 Intervalo para actualizar cada 1 segundo
+            setInterval(async () => {
+                try {
+
+                    const response_size = await fetch(`http://localhost:5000/api/serial/count/${cabina}`);
+                    const data_size = await response_size.json();
+                    if (data_size.count > valores.length) {
+                        
+                        const response = await fetch(`http://localhost:5000/api/serial/ultimo-dato/${cabina}`);
+                        const ultimoDato = await response.json();
+
+                        let valor = 0;
+                        switch (sensor) {
+                            case "T": valor = ultimoDato.t; break;
+                            case "H": valor = ultimoDato.h; break;
+                            case "UV": valor = ultimoDato.uv; break;
+                            case "CO2": valor = ultimoDato.co2; break;
+                            case "O3": valor = ultimoDato.o3; break;
+                            case "dB": valor = ultimoDato.db; break;
+                            case "X": valor = ultimoDato.x; break;
+                            case "Y": valor = ultimoDato.y; break;
+                            case "Z": valor = ultimoDato.z; break;
+                            default: return;
+                        }
+
+                        const labels = graficaCanvas.chartInstance.data.labels; //graficaCanvas.chartInstance
+                        const data = graficaCanvas.chartInstance.data.datasets[0].data;
+
+                        labels.push(`${labels.length+1}`);
+                        data.push(valor);
+
+
+                        graficaCanvas.chartInstance.update();
+
+                    }
+
+                    
+                } catch (error) {
+                    console.error("Error al obtener el último dato:", error);
+                }
+
+
+            }, 1000);
+
+
+            
         } catch (error) {
             console.error("Error al cargar datos de sensor:", error);
             alert("No se pudieron cargar datos desde el backend.");
